--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  // box-shadow: 1px 1px 1px 1px inset red;
 }
 
 $blue: rgb(57, 166, 222);
@@ -103,6 +102,10 @@ section {
   padding-bottom: 30px;
   font-weight: 800;
   font-size: 1.7rem;
+
+  @media screen and (max-width: 991px) {
+    font-size: 1.5rem;
+  }
 }
 
 body {
